# idears

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr.yml
src/: lib.rs  main.rs
src/config/: constants.rs  mod.rs  read.rs  setup.rs
src/config/setup/: config.toml  constants.rs  mod.rs
src/config/static/: config.toml
src/ideas/: create.rs
